added pagination to past schedule endpoints, and included time ids in ScheduleResponseDto for medication logging